force-app/main/default/objects/Datos_de_territorio__c/Datos_de_territorio__c.object-meta.xml
<CustomObject>
    <label>Territory Data</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Territory Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>