force-app/main/default/objects/Datos_de_territorio__c/fields/Economic_Activities__c.field-meta.xml
<CustomField>
    <fullName>Economic_Activities__c</fullName>
    <defaultValue>(&quot;{}&quot;)</defaultValue>
    <label>Economic_Activities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>