force-app/main/default/objects/Datos_de_territorio__c/fields/Education_Level_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>Education_Level_Tertiary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Education_Level_Tertiary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>