force-app/main/default/objects/Datos_de_territorio__c/fields/Income_Range_Low__c.field-meta.xml
<CustomField>
    <fullName>Income_Range_Low__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Income_Range_Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>