force-app/main/default/objects/Datos_de_territorio__c/fields/is_River_Id__c.field-meta.xml
<CustomField>
    <fullName>is_River_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is River Id</label>
    <type>Checkbox</type>
</CustomField>