force-app/main/default/objects/Datos_de_territorio__c/fields/Occupation_Not_Declared__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Not_Declared__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Occupation_Not_Declared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>