force-app/main/default/objects/Datos_de_territorio__c/fields/Occupation_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Self_Employed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Occupation_Self_Employed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>