force-app/main/default/objects/Datos_de_territorio__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territorio_Administrativo__c</referenceTo>
    <relationshipLabel>Territory Data</relationshipLabel>
    <relationshipName>Territory_Data</relationshipName>
    <type>Lookup</type>
</CustomField>