force-app/main/default/objects/Datos_de_territorio__c/fields/TerritoryWithGenderKey__c.field-meta.xml
<CustomField>
    <fullName>TerritoryWithGenderKey__c</fullName>
    <description>Se usa para facilitar los mapeos en apex. Al obtener una key unica para el registro y conocida en el registro del citizen (id territorio al que pertenece + genero del citizen)</description>
    <formula>CASESAFEID(Territory__c ) &amp;   UPPER(TEXT( Gender__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TerritoryWithGenderKey</label>
    <type>Text</type>
</CustomField>